app/static/css/search.css
body {
    display: block !important;
    margin: auto !important;
    min-width: 736px !important;
}

.autocomplete {
    position: relative;
    display: inline-block;
    width: 100%;
}

.autocomplete-items {
    position: absolute;
    border-bottom: none;
    border-top: none;
    z-index: 99;

    /*position the autocomplete items to be the same width as the container:*/
    top: 100%;
    left: 0;
    right: 0;
}

.autocomplete-items div {
    padding: 10px;
    cursor: pointer;
}

details summary {
    padding: 10px;
    font-weight: bold;
}

details summary span {
    font-weight: normal;
}

#lingva-iframe {
    width: 100%;
    height: 650px;
    border: 0;
}

.ip-address-div {
    padding-bottom: 0 !important;
}

.ip-text-div {
    padding-top: 0 !important;
}

